# mallocproj-handout

./: CMakeLists.txt  Makefile  README  config.h  fsecs.c  fsecs.h  mdriver.c  mm.c  mm.h
traces/: README  short1-bal.rep
